Fix blog post scrolling under header on mobile

--- a/website/themes/contact/assets/css/contact-theme.css
+++ b/website/themes/contact/assets/css/contact-theme.css
@@ -203,6 +203,7 @@ html {
   grid-area: header;
   font-family: var(--font-family-titles);
   padding: var(--default-half-spacing) 0;
+  background-color: var(--light);
 }
 
 .nav-header .logo {
